created board rows

--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Concentration</title>
-        <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
-        <header>
-        </header>
-        <main class="board">
-        </main>
-        <footer>
-        </footer>
-    </body>
+
+<head>
+    <title>Concentration</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+    <header>
+    </header>
+    <main>
+        <div id="board">
+        <div class="row" id="row1">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="row" id="row2">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="row" id="row3">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="row" id="row4">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        </div>
+    </main>
+    <footer>
+    </footer>
+</body>
+
 </html>
