created event listeners for reset & play buttons; card highligter and card selector

--- a/index.html
+++ b/index.html
@@ -14,29 +14,33 @@
     <main>
         <div id="board">
         <div class="row" id="row1">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="card" id="r1c1"></div>
+            <div class="card" id="r1c2"></div>
+            <div class="card" id="r1c3"></div>
         </div>
         <div class="row" id="row2">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="card" id="r2c1"></div>
+            <div class="card" id="r2c2"></div>
+            <div class="card" id="r2c3"></div>
         </div>
         <div class="row" id="row3">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="card" id="r3c1"></div>
+            <div class="card" id="r3c2"></div>
+            <div class="card" id="r3c3"></div>
         </div>
         <div class="row" id="row4">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="card" id="r4c1"></div>
+            <div class="card" id="r4c2"></div>
+            <div class="card" id="r4c3"></div>
         </div>
         </div>
     </main>
     <footer>
+        <button name="reset" class="button" id="reset">Reset</button>
+        <button name="play" class="button" id="play">Play</button>
     </footer>
+    <script src="js/jquery.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
