--- a/index.html
+++ b/index.html
@@ -10,34 +10,61 @@
 
 <body>
     <header>
+        <h1>Concentration</h1>
     </header>
     <main>
         <div id="board">
-        <div class="row" id="row1">
-            <div class="card" id="r1c1"></div>
-            <div class="card" id="r1c2"></div>
-            <div class="card" id="r1c3"></div>
-        </div>
-        <div class="row" id="row2">
-            <div class="card" id="r2c1"></div>
-            <div class="card" id="r2c2"></div>
-            <div class="card" id="r2c3"></div>
-        </div>
-        <div class="row" id="row3">
-            <div class="card" id="r3c1"></div>
-            <div class="card" id="r3c2"></div>
-            <div class="card" id="r3c3"></div>
-        </div>
-        <div class="row" id="row4">
-            <div class="card" id="r4c1"></div>
-            <div class="card" id="r4c2"></div>
-            <div class="card" id="r4c3"></div>
-        </div>
+            <div class="row" id="row1">
+                <div class="card" id="r1c1"></div>
+                <div class="card" id="r1c2"></div>
+                <div class="card" id="r1c3"></div>
+                <div class="card" id="r1c4"></div>
+                <div class="card" id="r1c5"></div>
+                <div class="card" id="r1c6"></div>
+                <div class="card" id="r1c7"></div>
+                <div class="card" id="r1c8"></div>
+                <div class="card" id="r1c9"></div>
+            </div>
+            <div class="row" id="row2">
+                <div class="card" id="r2c1"></div>
+                <div class="card" id="r2c2"></div>
+                <div class="card" id="r2c3"></div>
+                <div class="card" id="r2c3"></div>
+                <div class="card" id="r2c3"></div>
+                <div class="card" id="r2c3"></div>
+                <div class="card" id="r2c3"></div>
+                <div class="card" id="r2c3"></div>
+                <div class="card" id="r2c3"></div>
+            </div>
+            <div class="row" id="row3">
+                <div class="card" id="r3c1"></div>
+                <div class="card" id="r3c2"></div>
+                <div class="card" id="r3c3"></div>
+                <div class="card" id="r3c4"></div>
+                <div class="card" id="r3c5"></div>
+                <div class="card" id="r3c6"></div>
+                <div class="card" id="r3c7"></div>
+                <div class="card" id="r3c8"></div>
+                <div class="card" id="r3c9"></div>
+            </div>
+            <div class="row" id="row4">
+                <div class="card" id="r4c1"></div>
+                <div class="card" id="r4c2"></div>
+                <div class="card" id="r4c3"></div>
+                <div class="card" id="r4c4"></div>
+                <div class="card" id="r4c5"></div>
+                <div class="card" id="r4c6"></div>
+                <div class="card" id="r4c7"></div>
+                <div class="card" id="r4c8"></div>
+                <div class="card" id="r4c9"></div>
+            </div>
         </div>
     </main>
     <footer>
-        <button name="reset" class="button" id="reset">Reset</button>
-        <button name="play" class="button" id="play">Play</button>
+        <div id="centerButtons">
+            <button name="reset" class="button" id="reset">Reset</button>
+            <button name="play" class="button" id="play">Play</button>
+        </div>
     </footer>
     <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
