--- a/index.html
+++ b/index.html
@@ -15,48 +15,48 @@
     <main>
         <div id="board">
             <div class="row" id="row1">
-                <div class="card" id="r1c1"></div>
-                <div class="card" id="r1c2"></div>
-                <div class="card" id="r1c3"></div>
-                <div class="card" id="r1c4"></div>
-                <div class="card" id="r1c5"></div>
-                <div class="card" id="r1c6"></div>
-                <div class="card" id="r1c7"></div>
-                <div class="card" id="r1c8"></div>
-                <div class="card" id="r1c9"></div>
+                <div class="card back" id="r1c1"></div>
+                <div class="card back" id="r1c2"></div>
+                <div class="card back" id="r1c3"></div>
+                <div class="card back" id="r1c4"></div>
+                <div class="card back" id="r1c5"></div>
+                <div class="card back" id="r1c6"></div>
+                <div class="card back" id="r1c7"></div>
+                <div class="card back" id="r1c8"></div>
+                <div class="card back" id="r1c9"></div>
             </div>
             <div class="row" id="row2">
-                <div class="card" id="r2c1"></div>
-                <div class="card" id="r2c2"></div>
-                <div class="card" id="r2c3"></div>
-                <div class="card" id="r2c3"></div>
-                <div class="card" id="r2c3"></div>
-                <div class="card" id="r2c3"></div>
-                <div class="card" id="r2c3"></div>
-                <div class="card" id="r2c3"></div>
-                <div class="card" id="r2c3"></div>
+                <div class="card back" id="r2c1"></div>
+                <div class="card back" id="r2c2"></div>
+                <div class="card back" id="r2c3"></div>
+                <div class="card back" id="r2c3"></div>
+                <div class="card back" id="r2c3"></div>
+                <div class="card back" id="r2c3"></div>
+                <div class="card back" id="r2c3"></div>
+                <div class="card back" id="r2c3"></div>
+                <div class="card back" id="r2c3"></div>
             </div>
             <div class="row" id="row3">
-                <div class="card" id="r3c1"></div>
-                <div class="card" id="r3c2"></div>
-                <div class="card" id="r3c3"></div>
-                <div class="card" id="r3c4"></div>
-                <div class="card" id="r3c5"></div>
-                <div class="card" id="r3c6"></div>
-                <div class="card" id="r3c7"></div>
-                <div class="card" id="r3c8"></div>
-                <div class="card" id="r3c9"></div>
+                <div class="card back" id="r3c1"></div>
+                <div class="card back" id="r3c2"></div>
+                <div class="card back" id="r3c3"></div>
+                <div class="card back" id="r3c4"></div>
+                <div class="card back" id="r3c5"></div>
+                <div class="card back" id="r3c6"></div>
+                <div class="card back" id="r3c7"></div>
+                <div class="card back" id="r3c8"></div>
+                <div class="card back" id="r3c9"></div>
             </div>
             <div class="row" id="row4">
-                <div class="card" id="r4c1"></div>
-                <div class="card" id="r4c2"></div>
-                <div class="card" id="r4c3"></div>
-                <div class="card" id="r4c4"></div>
-                <div class="card" id="r4c5"></div>
-                <div class="card" id="r4c6"></div>
-                <div class="card" id="r4c7"></div>
-                <div class="card" id="r4c8"></div>
-                <div class="card" id="r4c9"></div>
+                <div class="card back" id="r4c1"></div>
+                <div class="card back" id="r4c2"></div>
+                <div class="card back" id="r4c3"></div>
+                <div class="card back" id="r4c4"></div>
+                <div class="card back" id="r4c5"></div>
+                <div class="card back" id="r4c6"></div>
+                <div class="card back" id="r4c7"></div>
+                <div class="card back" id="r4c8"></div>
+                <div class="card back" id="r4c9"></div>
             </div>
         </div>
     </main>
