removed play button; matches now animate and disapear

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <footer>
         <div id="centerButtons">
             <button name="reset" class="button" id="reset">Reset</button>
-            <button name="play" class="animated bounceIn button" id="play">Play</button>
+            <!--             <button name="play" class="animated bounceIn button" id="play">Play</button> -->
         </div>
     </footer>
     <script src="js/jquery.js"></script>
